--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,3 +1,15 @@
+#hero {
+	height: calc(100vh - 56px);
+	/*Pexels License for profile images*/
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 0.80) 100%)
+		,linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 0.80) 100%)
+		, url('/img/banner.webp');
+}
+
+#hero-padding {
+	 height: calc(100vh - 350px);
+}
+
 .cards {
 	padding: 1.5rem;
 }
@@ -10,16 +22,6 @@
 	/*padding-top: 2rem;*/
 	/*padding-bottom: 2rem;*/
 	color: #209cee;
-}
-
-#banner {
-	background-image: url('/img/banner.svg');
-	height: 460px;
-	position: relative;
-	width: 100%;
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
 }
 
 #cookie-banner {
@@ -48,5 +50,24 @@
 @media screen and (max-width: 600px) {
 	#banner {
 		 height: 300px;
+	}
+	
+	#hero {
+		background-size: 600px;
+	}
+}
+
+@media screen and (max-width: 374px) {
+	#banner {
+		 height: 300px;
+	}
+	#hero-padding {
+	 height: calc(100vh - 390px);
+	}
+}
+
+@media screen and (max-height: 600px) {
+	#hero .hero-body {
+		padding: 1.5rem 1.5rem;
 	}
 }
