--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
 					<h1 class="title is-size-2" th:text="#{app.name}" style="color: white;"></h1>
 					<h2 class="subtitle is-size-4" th:text="#{index.subtitle}" style="color: white;"></h2>
 					<div id="hero-padding"></div>
-					<a class="button is-info" style="margin-bottom: 48px;" th:utext="#{index.sign-up-now}"
+					<a class="button is-info" id="hero-register-button" th:utext="#{index.sign-up-now}"
 						href="/register"></a>
 					<div th:text="#{index.subtitle-2}" style="color: white;"></div>
 					<div th:text="#{index.notice}" style="font-size: 0.6em; color: white;"></div>
