--- a/src/main/resources/templates/blocked-users.html
+++ b/src/main/resources/templates/blocked-users.html
@@ -65,6 +65,7 @@
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/alovoa.js"></script>
 </body>
 
 </html>
