--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -52,6 +52,7 @@
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/imprint.js"></script>
 </body>
 </html>
