--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -345,6 +345,7 @@
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/profile.js"></script>
 </body>
 </html>
