--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,5 +1,6 @@
 #hero {
 	height: calc(100vh - 56px);
+	height: calc(100 * var(--vh) - 56px);
 	/*Pexels License for profile images*/
 	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 0.80) 100%)
 		,linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 0.80) 100%)
@@ -8,6 +9,7 @@
 
 #hero-padding {
 	 height: calc(100vh - 370px);
+	 height: calc(100 * var(--vh) - 370px);
 }
 
 #hero-register-button {
@@ -71,6 +73,7 @@
 	}
 	#hero-padding {
 	 height: calc(100vh - 410px);
+	 height: calc(100 * var(--vh) - 410px);
 	}
 }
 
