--- a/src/main/resources/templates/delete-account.html
+++ b/src/main/resources/templates/delete-account.html
@@ -57,6 +57,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/delete-account.js"></script>
 </body>
 </html>
