--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -50,6 +50,7 @@
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/donate.js"></script>
 </body>
 </html>
