--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -51,6 +51,7 @@
 
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
+	<script src="/js/alovoa.js"></script>
 </body>
 
 </html>
