--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -175,6 +175,7 @@
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/sw.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/index.js"></script>
 </body>
 
