--- a/src/main/resources/templates/message-detail.html
+++ b/src/main/resources/templates/message-detail.html
@@ -56,6 +56,7 @@
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/message-detail.js"></script>
 </body>
 </html>
