--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -59,6 +59,7 @@
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/message.js"></script>
 </body>
 
