--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -60,6 +60,7 @@
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script>
 		function viewProfile(idEnc) {
 			let url = 'profile/view/' + idEnc;
