--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -59,6 +59,7 @@
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/tools/check-password.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/password-change.js"></script>
 </body>
 </html>
