--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -113,6 +113,7 @@
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/search.js"></script>
 </body>
 </html>
