--- a/src/main/resources/templates/tos.html
+++ b/src/main/resources/templates/tos.html
@@ -29,5 +29,6 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/alovoa.js"></script>
 </body>
 </html>
