--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -244,6 +244,7 @@
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/alovoa.js"></script>
 	<script src="/js/user-profile.js"></script>
 </body>
 </html>
