--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html th:lang="${lang}">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Alovoa">
-<link rel="manifest" href="/manifest/manifest.json">
 
-<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-<th:block th:replace="fragments.html::bulma"></th:block>
-<th:block th:replace="fragments.html::ui-design"></th:block>
-<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
-<link rel="stylesheet" href="/css/lib/swiper.min.css" />
-<link rel="stylesheet" href="/css/lib/css-loaders.css" />
-<link rel="stylesheet" href="/css/lib/pulse-button.css" />
-<link rel="stylesheet" href="/css/alovoa.css" />
-<link rel="stylesheet" href="/css/search.css" />
-<title th:text="#{search.title}"></title>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="Alovoa">
+	<link rel="manifest" href="/manifest/manifest.json">
+
+	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
+	<th:block th:replace="fragments.html::bulma"></th:block>
+	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<link rel="stylesheet" href="/css/lib/leaflet.min.css" />
+	<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
+	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
+	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
+	<link rel="stylesheet" href="/css/lib/pulse-button.css" />
+	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/search.css" />
+	<title th:text="#{search.title}"></title>
 </head>
+
 <body>
 	<div id="main-logged-in">
 		<header th:insert="fragments.html::header-logged-in"></header>
@@ -27,10 +30,9 @@
 				<div style="display: flex">
 					<div style="flex-grow: 1">
 						<label class="label" th:text="#{search.max-distance}"></label>
-						<div class="slider-container"
-							style="padding-top: 8px; padding-bottom: 8px;">
-							<input class="slider has-output " step="1" min="1" max="100"
-								value="50" type="range" id="max-distance-slider">
+						<div class="slider-container" style="padding-top: 8px; padding-bottom: 8px;">
+							<input class="slider has-output " step="1" min="1" max="100" value="50" type="range"
+								id="max-distance-slider">
 							<output for="max-distance-slider">50</output>
 							<div style="padding-left: 4px"></div>
 							<span th:text="#{km}"></span>
@@ -38,8 +40,7 @@
 					</div>
 					<div id="distance-spacing" style="padding-left: 24px;"></div>
 				</div>
-				<div id="search-right"
-					style="display: flex; width: 100%; margin-bottom: 12px;">
+				<div id="search-right" style="display: flex; width: 100%; margin-bottom: 12px;">
 					<div style="flex: 1;">
 						<label class="label" th:text="#{sort}"></label>
 						<div class="select">
@@ -58,8 +59,8 @@
 			<div class="section" id="search-button-section">
 				<div class="container">
 					<div class="pulse-button-container">
-						<button class="button colored is-info is-rounded pulse-button"
-							onclick="search()" id="search-button">
+						<button class="button colored is-info is-rounded pulse-button" onclick="search()"
+							id="search-button">
 							<i class="fa fa-search"></i>
 						</button>
 					</div>
@@ -70,8 +71,7 @@
 
 		<section class="container" id="main-container"></section>
 
-		<div id="donate-modal" class="modal is-active"
-			th:if="${showDonationPopup}">
+		<div id="donate-modal" class="modal is-active" th:if="${showDonationPopup}">
 			<div class="modal-background"></div>
 			<div class="modal-content">
 				<div class="box">
@@ -85,8 +85,8 @@
 									th:text="#{search.donation.popup}"></span>
 								<div style="padding-top: 12px;"></div>
 
-								<button class="button right is-info colored"
-									onclick="onDonateModalClicked()" th:text="#{donate}"></button>
+								<button class="button right is-info colored" onclick="onDonateModalClicked()"
+									th:text="#{donate}"></button>
 
 								<button class="button is-danger is-outlined" th:text="#{cancel}"
 									style="margin-right: 4px;"
@@ -98,6 +98,14 @@
 				</div>
 			</div>
 		</div>
+
+		<div id="map-modal" class="modal">
+			<div class="modal-background" onclick="closeModal()"></div>
+			<div class="modal-content">
+				<div id="map"></div>
+			</div>
+		</div>
+		
 	</div>
 
 	<div class="loader-parent">
@@ -110,10 +118,13 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
 	<script src="/js/lib/bulma-slider.min.js"></script>
+	<script src="/js/lib/leaflet.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/search.js"></script>
 </body>
+
 </html>
