Add privacy policy change date to login because mails aren't working properly yet.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,6 +26,8 @@
 				<div>
 					<h3 class="title" th:text="#{login.title}"></h3>
 					<p class="subtitle" th:text="#{login.subtitle}"></p>
+					<div class="notification is-primary"><span th:text="#{login.privacy-policy}"></span> <span th:text="${privacyPolicyDate}"></span></div>
+					
 					<div class="box no-shadow" style="padding: 0px; margin-bottom: 0px;">
 						<header class="card-header collapsible-header no-shadow"
 							style="margin-left: 10px; margin-right: 10px;">
