--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,7 +13,6 @@
 	<th:block th:replace="fragments.html::bulma"></th:block>
 	<th:block th:replace="fragments.html::ui-design"></th:block>
 	<link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
-	<link rel="stylesheet" href="/css/lib/bulma-calendar.min.css" />
 	<link rel="stylesheet" href="/css/lib/bulma-collapsible.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<title th:text="#{register.title}"></title>
@@ -62,7 +61,7 @@
 									<label class="label" th:text="#{dob}" style="float: left;"></label><span
 										class="asterisk">*</span>
 									<div class="control">
-										<input type="date" name="dateOfBirth" style="width: 100%;" required>
+										<input id="dob-input" class="input" type="date" name="dateOfBirth" style="width: 100%;" required>
 									</div>
 								</div>
 
@@ -160,15 +159,10 @@
 
 	</div>
 
-
-
-
-
 	<footer th:replace="fragments.html::footer"></footer>
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/lib/bulma-calendar.min.js"></script>
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/check-password.js"></script>
