--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -24,7 +24,7 @@
 			<div class="container">
 
 				<div class="box">
-					<a href="https://ko-fi.com/alovoa" target="_blank" class="button is-info"
+					<a href="https://ko-fi.com/alovoa" target="_blank" class="button colored is-info"
 						style="width: 100%; border-color: #dbdbdb; margin-bottom: 4px;"><i class="fa fa-coins"></i><span
 							th:text="#{kofi}" style="padding-left: 4px;"></span></a>
 					<div class="notification is-success" th:text="#{donate.notice-1}"
@@ -32,7 +32,7 @@
 					<div class="notification is-success" style="font-size: 0.8em;" th:text="#{donate.notice-2}"></div>
 				</div>
 				<div class="box">
-					<a href="https://www.buymeacoffee.com/alovoa" target="_blank" class="button is-info"
+					<a href="https://www.buymeacoffee.com/alovoa" target="_blank" class="button colored is-info"
 						style="width: 100%; border-color: #dbdbdb; margin-bottom: 4px;"><i class="fa fa-coins"></i><span
 							th:text="#{bmac}" style="padding-left: 4px;"></span></a>
 					<div class="notification is-success" th:text="#{donate.notice-1}"
