--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,7 +66,7 @@
 								</label>
 							</div>
 							-->
-									<button class="button is-link" th:text="#{submit}"></button>
+									<button class="button colored is-link" th:text="#{submit}"></button>
 								</form>
 							</div>
 						</div>
