--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -87,7 +87,7 @@
 						<div class="field is-grouped"
 							style="display: flex; justify-content: flex-start;">
 							<div class="control">
-								<button class="button is-link" type="submit" th:text="#{submit}"></button>
+								<button class="button colored is-link" type="submit" th:text="#{submit}"></button>
 							</div>
 							<div class="control">
 								<button class="button is-danger is-outlined" type="button"
