--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -53,25 +53,23 @@
 				<div class="content">
 					<div class="media">
 						<div class="full-width">
-							<div class="left" style="font-size: 2em" th:text="${user.firstName}"></div>
-							<div class="right" style="font-size: 1.5em">
-								<span th:text="#{age}"></span><span>: </span><span th:text="${user.age}"></span>
+							<div class="left first-name" style="font-size: 2em" th:text="${user.firstName}"
+								th:classappend="${user.gender.text == 'male' ? 'male' : user.gender.text == 'female' ? 'female' : 'other'}">
+							</div>
+							<div class="left" style="font-size: 1.5em; padding-top: 8px;">
+								<span>, </span><span th:text="${user.age}"></span>
+							</div>
+							<div class="right" style="font-size: 1.2em; padding-top: 8px;">
+								<i class="fa fa-map-marker-alt"></i>
+								<span th:text="${user.distanceToUser}"></span><span> </span><span
+									th:text="#{km}"></span>
 							</div>
 						</div>
 					</div>
 					<div class="media">
 						<div class="full-width">
-							<div class="left" style="font-size: 1.2em">
+							<div class="left">
 								<span th:text="#{last-active}"></span><span>: </span><span th:text="${#dates.format(user.activeDate, 'yyyy-MM-dd')}"></span>
-							</div>
-						</div>
-					</div>
-					<div class="media" style="border-top: none; padding-top: 0px;">
-						<div class="full-width">
-							<div class="left" style="font-size: 1.2em">
-								<span th:text="#{distance}"></span><span>: </span><span
-									th:text="${user.distanceToUser}"></span><span th:text="#{km}"
-									style="padding-left: 4px;"></span>
 							</div>
 						</div>
 					</div>
@@ -221,7 +219,7 @@
 						<div th:replace="fragments.html::captcha"></div>
 						<div class="field" style="height: 42px">
 
-							<button class="button is-info" style="float: right;"
+							<button class="button is-info colored" style="float: right;"
 								th:onclick="reportUserSubmit([[${user.idEncoded}]])"
 								th:text="#{submit}"></button>
 							<button class="button is-danger is-outlined"
