Fix Czech translation file and add to language list

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -91,6 +91,7 @@ oc
 								<option value="?lang=fr">Français (beta)</option>
 								<option value="?lang=pt">Português (beta)</option>
 								<option value="?lang=it">Italiano (beta)</option>
+								<option value="?lang=cz">Čeština (beta)</option>
 								<option value="?lang=ru">русский (beta)</option>
 								<option value="?lang=ja">日本語 (beta)</option>
 								<option value="?lang=zh">中文 (beta)</option>
