--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,9 +26,8 @@
 				<div>
 					<h3 class="title" th:text="#{login.title}"></h3>
 					<p class="subtitle" th:text="#{login.subtitle}"></p>
-					<div class="notification is-primary"><span th:text="#{login.privacy-policy}"></span> <span
-							th:text="${privacyPolicyDate}"></span></div>
-
+					<div class="notification is-primary"><span th:text="#{login.privacy-policy}"></span> <span th:text="${privacyPolicyDate}"></span></div>
+					
 					<div class="box no-shadow" style="padding: 0px; margin-bottom: 0px;">
 						<header class="card-header collapsible-header no-shadow"
 							style="margin-left: 10px; margin-right: 10px;">
@@ -60,11 +59,13 @@
 										</div>
 									</div>
 									<div th:replace="fragments.html::captcha"></div>
-									<div class="field">
-										<label class="checkbox"> <input type="checkbox" name="remember-me"> <span
-												th:text="#{login.remember}"></span>
-										</label>
-									</div>
+									<!-- TODO: Causes exception 
+							<div class="field">
+								<label class="checkbox"> <input type="checkbox"
+									name="remember-me"> Remember me
+								</label>
+							</div>
+							-->
 									<button class="button colored is-link" th:text="#{submit}"></button>
 								</form>
 							</div>
