Added 2 new sort options in search (total donations and new users). Improve search overlay to prevent consecutive search activations. Some sort algorithms now directly filter in query instead of in code.

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -46,9 +46,11 @@
 						<div class="select">
 							<select id="sort">
 								<option value="4" th:text="#{default}"></option>
+								<option value="6" th:text="#{search.sort.filter.new-users}"></option>
 								<option value="1" th:text="#{search.sort.filter.distance}"></option>
-								<option value="2" th:text="#{search.sort.filter.active}"></option>
 								<option value="3" th:text="#{search.sort.filter.interests}"></option>
+								<option value="2" th:text="#{search.sort.filter.active}"></option>
+								<option value="5" th:text="#{search.sort.filter.total-donation}"></option>
 							</select>
 						</div>
 					</div>
@@ -105,7 +107,7 @@
 				<div id="map"></div>
 			</div>
 		</div>
-		
+
 	</div>
 
 	<div class="loader-parent">
