Add password reset option in profile

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -303,6 +303,9 @@
 						<a th:text="#{profile.blocked-users}" href="/blocked-users"></a>
 					</div>
 					<div class="field">
+						<a th:text="#{password-change.title}" id="password-change-submit"></a>
+					</div>
+					<div class="field">
 						<a th:text="#{profile.userdata.request}" id="userdata-submit"></a>
 					</div>
 					<div class="field">
